--- a/index.html
+++ b/index.html
@@ -1,56 +1,30 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
-
-    <title>Ebrew18.GitHub.io by ebrew18</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>Ebrew18.GitHub.io</h1>
-        <h2>About Me</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/ebrew18" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <p>`<code>### Welcome to GitHub Pages.
-This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here [using GitHub Flavored Markdown](https://guides.github.com/features/mastering-markdown/), select a template crafted by a designer, and publish. After your page is generated, you can check out the new</code>gh-pages` branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
++<html>
+ +<div class="intro">
+ +  <h3>Welcome to me!</h3>
+ +</div>
+ +
+ +<div class="stuff">
+ +  <div class="part1">
+ +    <h3>Who am I?</h3>
+ +    <p>Hi, my name is Eric. At the time of writing this, I am 23 years old and live in Southern California, in the city of Riverside. I began learning to code in January of 2015, and it's become one of the best parts of my life. Seeing how websites and applications are designed and programmed is so interesting. When I first got interested in coding, it was the best decision of my life. I started learning from various websites, it made me incredibly happy to know that I didn't have to set foot in a classroom to pick up such a valuable skill. </p>
+ +    <p>I don't really have a favorite language, but I do enjoy Javascript and Ruby in particular. If I had to list any shortcomings, it would have to be that I am still inexperienced. But I am looking to change that, and I eagerly await any projects coming my way.</p>
+ +    <h2>Web Design</h2>
+ +    <p>I am looking forward to getting into web design from a professional standpoint. I want to collaborate with others to make the most elegant, beautiful designs we can.</p>
+ +  </div>
+ +  <div class="part2">
+ +    <h2>Web Development</h2>
+ +    <p>For a while now, I've been learning all the languages that I could get my hands on. I've become proficient in Ruby, Javascript, PHP, HTML (as you can see here), and a few others. I not only pick things up quickly, but I'm always eager to learn whatever is necessary to complete a project. I thoroughly enjoy learning and being able to use new code.</p>
+ +  </div>
+ +  <div class="part3">
+ +    <h2>What can I do for you?</h2>
+ +    <p>Anything you need. If I can't do it, I'll learn how or find someone who can. I love working in a group. It's so nice when there's a collective mind intent on achieveing a goal, allowing us to compliment and improve on eachother and ourselves.</p>
+ +  </div>
+ +</div>
+ +<div class="plans">
+ +  <h2>What are my goals for the future?</h2>
+ + <p>A job I enjoy with people I can work with, or even just a job I enjoy by myself. If it involves programming, I'll either love it or learn to love it. I'm still new to web design, but it's quickly becoming easier and easier for me, and quickly enjoyable. </p>
+ +  
+ +</div>
+ +</html> 
+ 
